# chat_bot

./: .gitignore  ORIGINAL_REQUEST.md  REDIS_LATENCY.md  chatbot_test_report_20260712_010423.json  chatbot_test_report_20260712_014329.json  chatbot_test_report_20260712_015912.json  chatbot_test_report_20260712_020238.json  chatbot_test_report_20260712_020453.json  chatbot_test_report_20260712_021233.json  chatbot_test_report_20260712_141736.json  chatbot_test_report_20260712_142101.json  chatbot_test_report_20260712_143217.json  chatbot_test_report_20260712_152802.json  chatbot_test_report_20260712_152955.json  chatbot_test_report_20260713_153239.json  index.html  proxy.py  system report.md  test.py
chatbot/: .env.example  .gitignore  README.md  chatbot_test_report_20260714_133501.json  check_queries.py  config.py  index.html  logging_setup.py  main.py  pyproject.toml  run_empirical_test.py  schemas.py
chatbot/advisor/: __init__.py  flow.py
chatbot/analytics/: __init__.py  emitter.py  events.py
chatbot/data/: __init__.py  accessor.py  catalog.sample.json  chip_map.json  flow_map.json  loader.py  tools_content.json
chatbot/docs/: GUIDED_NAVIGATION_PROTOTYPE.md  WIDGET_2_ARCHITECTURE.md  WIDGET_AI_ADVISOR_REDESIGN.md  WIDGET_DESIGN_SYSTEM_AUDIT.md  WIDGET_V2_FUNNEL_ARCHITECTURE.md
chatbot/funnel/: __init__.py  chip_config.py  engine.py  flow_config.py
chatbot/leads/: __init__.py  crm_schema.py  funnel.py  webhook.py
chatbot/llm/: __init__.py  client.py  prompts.py
chatbot/nlu/: __init__.py  action_classifier.py  callback_detector.py  intent.py  mention_extractor.py
chatbot/presentation/: __init__.py  cards.py  chips.py  experience.py  formatter.py  guided_navigation.py  response_builder.py
chatbot/resilience/: __init__.py  guards.py  health.py  intent_metrics.py
(+157 files in other folders)
